# ABVME

./: .gitignore  ARCHITECTURE.md  README.md  SaveDialog.ui  app.py  asda1213235.py  backend.py  custom_filter_header.py  index.html  main.py  main_ui.py  package-lock.json  package.json  photoviewer.py  pyproject.toml  requirements.txt  styles.qss  vite.config.ts
.github/workflows/: auto_tag.yml  build_release.yml
models/: __init__.py  asset_model.py  core_model.py
services/: __init__.py  edit_worker.py  loader_worker.py  logging_handler.py  save_worker.py
src/: App.css  App.tsx  api.ts  index.css  tauri-compat.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AssetTable.css  AssetTable.tsx  PreviewPanel.css  PreviewPanel.tsx  SaveDialog.css  SaveDialog.tsx  StatusBar.css  StatusBar.tsx
utilities/: __init__.py  file_drop_widget.py  launch_coalescer.py  resource_path.py  single_instance.py
viewmodels/: __init__.py  main_viewmodel.py
views/: __init__.py  asset_table_widget.py  main_window.py  preview_panel_widget.py  save_dialog.py
views/components/: custom_filter_header.py  photoviewer.py
