[project]
name = "AssetBundlesEditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pyqtgraph>=0.14.0",
    "pyside6==6.7.2",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
    "unitypy>=1.23.0",
]
