[project]
name = "ABVME"
version = "0.1.8"
description = "Asset Bundles Viewer Modifier and Exporter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unitypy==1.23.0",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "nuitka",
]
